--- a/sample_config.json
+++ b/sample_config.json
@@ -1,6 +1,8 @@
 {
   "username": "my_username",
   "password": "my_password",
+  "account_name" : "account_name",
+  "account_key" : "account_key",
   "start_date": "2017-01-01T00:00:00Z",
   "container_name": "myblobstoragecontainer"
 }
